--- a/login.html
+++ b/login.html
@@ -112,7 +112,7 @@ img{
             
             <p>
                 Not have an account 
-                <a href="day13.html">Sign Up</a>
+                <a href="register.html">Sign Up</a>
             </p>
             <h4 style="text-align:center;">Or login with</h4>
             <img src="https://pbs.twimg.com/profile_images/638771889339404289/h64dZ4wh_400x400.png">
